k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector: #Select which Object to provide the Service to
    component: web
  ports:
    - port: 3000 #port for other pod to access this prot
      targetPort: 3000 #port on this target pod that we are providing access to
